add a article or modify resources